Opened 5 weeks ago
Closed 4 weeks ago
#19372 closed bug (fixed)
pcnet driver crashes on initialization
Reported by: | madmax | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Drivers/Network/pcnet | Version: | R1/beta5 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Launching a qemu VM with -nic user,model=pcnet
crashes before reaching the desktop. Tracked to b487eec7 in hrev58493.
Attachments (1)
Change History (6)
by , 5 weeks ago
comment:1 by , 5 weeks ago
Milestone: | Unscheduled → R1/beta6 |
---|
comment:2 by , 5 weeks ago
comment:3 by , 5 weeks ago
Feel free to put it at the very bottom of your list. I don't even know why I had that, and other choices (and, in fact, not choosing a model) work without issues.
comment:4 by , 5 weeks ago
It's probably among the slower options also. The default is e1000 (ipro1000) which is likely faster.
Note:
See TracTickets
for help on using tickets.
Probably a simple fix in the probe method is needed. I'll fix if nobody beats me to it, which may be not until next week.