drivers/network/pcnet: Allocate a small softc on the stack in probe().

Fixes #19372.